deploy/kube-tunnel/kube-tunnel-gateway.yaml
# Source: gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-gateway
  namespace: infra
spec:
  selector:
    app: kube-gateway
  type: ClusterIP
  ports:
  - name: http-80
    port: 80
    targetPort: 80
    protocol: TCP
  - name: http-8000
    port: 8000
    targetPort: 8000
    protocol: TCP
---
# Source: gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-gateway
  namespace: infra
spec:
  selector:
    matchLabels:
      app: kube-gateway
  replicas:
  template:
    metadata:
      labels:
        app: kube-gateway
    spec:
      containers:
      - name: kube-gateway
        resources:
          requests:
            cpu: 0.1
            memory: 100Mi
          limits:
            cpu: 1
            memory:  500Mi
        readinessProbe:
          httpGet:
            port: 80
            path: /console/status
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            port: 80
            path: /console/status
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        image: bryantrh/kube-tunnel-gateway:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 8000
          protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
# Source: gateway/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  kube-gateway
  namespace: infra
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: kube-tunnel-gateway.example.cn
      http:
          paths:
            - backend:
                service:
                  name: kube-gateway
                  port:
                    number: 80
              path: /
              pathType: Prefix
  tls:
      - hosts:
        - kube-tunnel-gateway.example.cn
        secretName: nginx-tls
